solc_ossfuzz_seed_corpus/test_sol/test_051c1e662e11ef4f7b9f2ae976c65fb7fc39f9c32cd85af6570f94656579af37_f537d8c25e069b6542aa47a559ade2e3b5a5c4ee_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  mapping(bytes15 => bool) el0;
  bytes el1;
  bytes17 el2;
}
library L0 {
  event ev0(address  ep0);
  function f0(function (bytes29, bytes24) internal   i0,bytes16[] memory i1) public   
  {
  }
}
using L0 for uint;
using L0 for uint;
// ----
// TypeError 4103: (su0.sol:155-196): Internal type is not allowed for public or external functions.
